style customization for Tablet, Smartphone fix contentMeta to dark gray move link to footer.tsx and add margin top to 1rem add gap sidebar to 1rem add scrollable ul.overflow element max-height to 200px add line-height list body to 1.8 for readibility

--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -90,6 +90,7 @@ svg {
   flex-direction: row;
   display: flex;
   align-items: center;
+  -webkit-user-select: none;
   user-select: none;
 
   & div > a {
