--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -4,6 +4,7 @@
 
 html {
   scroll-behavior: smooth;
+  -webkit-text-size-adjust: none;
   text-size-adjust: none;
   overflow-x: hidden;
   width: 100vw;
@@ -42,7 +43,9 @@ ul,
 .math {
   color: var(--darkgray);
   fill: var(--darkgray);
+  -webkit-hyphens: auto;
   hyphens: auto;
+  
 }
 
 p,
@@ -165,13 +168,14 @@ a {
       flex: 1;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 1rem;
       top: 0;
       width: $sidePanelWidth;
       margin-top: $topSpacing;
       box-sizing: border-box;
-      padding: 0 4rem;
+      padding: 0 1rem;
       position: fixed;
+      
       @media all and (max-width: $fullPageWidth) {
         position: initial;
         flex-direction: row;
@@ -192,7 +196,6 @@ a {
 
     & .sidebar.right {
       right: calc(calc(100vw - $pageWidth) / 2 - $sidePanelWidth);
-      flex-wrap: wrap;
       & > * {
         @media all and (max-width: $fullPageWidth) {
           flex: 1;
@@ -306,6 +309,7 @@ h6 {
     transition: opacity 0.2s ease;
     transform: translateY(-0.1rem);
     font-family: var(--codeFont);
+    -webkit-user-select: auto;
     user-select: none;
   }
 
@@ -433,7 +437,7 @@ code {
 tbody,
 li,
 p {
-  line-height: 1.6rem;
+  line-height: 1.8rem;
 }
 
 .table-container {
@@ -507,7 +511,7 @@ div:has(> .overflow) {
 
 ul.overflow,
 ol.overflow {
-  max-height: 400;
+  max-height: 200;
   overflow-y: auto;
 
   // clearfix
